--- a/resource/plugin.ini
+++ b/resource/plugin.ini
@@ -3,15 +3,15 @@
 
 [meta]
 createdby = ClientExec LLC
-name = eNom
+name = OpenSRS
 type = registrar
 included = 1
 
 [ext_urls]
-official_url = http://www.enom.com
-forum_url = https://github.com/clientexec/enom-registrar/issues
+official_url = http://www.opensrs.com
+forum_url = https://github.com/clientexec/opensrs-registrar/issues
 creator_url = http://www.clientexec.com
-brief= Integrate with your eNom domain reseller account
+brief= Integrate with your OpenSRS domain reseller account
 
 [assets]
 paypal1.png = Top of PayPal Configuration Screen
